# bday

./: .gitignore  Dockerfile  create_holiday_promos.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  scheduler.sh  update_plans.py
bday/: .env.docker  .gitignore  Dockerfile  asgi.py  celery.py  celerybeat-schedule.db  check_tags.py  create_db.py  create_promo_campaign.py  db_check_script.py  debug_records.py  deep_debug.py  docker-compose.yml  dummy_test.html  entrypoint.sh  fix_tags.py  list_activities.py  requirements.txt  scheduler.sh  settings.py  test_spaces.html  wsgi.py
bday/bday/: settings.py  urls.py
bday/birthday/: context_processors.py  forms.py  models.py  reports.py  tasks.py  tests.py  urls.py  utils.py  views.py
bday/birthday/migrations/: 0005_messagetemplate_scheduledwish.py  (+13 more)
bday/nginx/: nginx.conf
bday/scratch/: test_signalwire.py
bday/templates/: base.html  index.html
birthday/: forms.py  models.py  reports.py  tasks.py  utils.py  views.py
birthday/migrations/: 0001_initial.py  0002_alter_patient_address_alter_patient_city_and_more.py  0003_patient_patient_type.py  0007_patientstatus.py  0010_emailsignature_alter_patient_options_and_more.py  0013_planhistory.py  0016_practice_client_id.py
nginx/conf.d/: default.conf
templates/: base.html
templates/birthday/: patient_confirm_delete.html  patient_detail.html  patient_form.html  patient_list.html  recipient_form.html  schedule_form.html  scheduled_list.html  signature_confirm_delete.html  signature_list.html
templates/components/: premium_styles.html
(+40 files in other folders)
